--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -41,3 +41,18 @@
 .activities{
     font-size: 2em;
 }
+
+
+@media (max-width: 768px) {
+    .navbar-brand {
+        font-size: .9em;
+    }
+
+
+    .btn-out {
+        margin: 5px;
+        width: 250px;
+        font-size: 1em;
+    }
+
+}
